@@ -44,6 +44,8 @@ public:
     GEnergies(const std::string& filename,
               const std::string& extname = "ENERGIES");
     GEnergies(const GEnergies& energies);
+    GEnergies(const int& num, const GEnergy& emin, const GEnergy& emax,
+              const bool& log = true);
     virtual ~GEnergies(void);
  
     // Methods
@@ -58,9 +60,14 @@ public:
     void        remove(const int& index);
     void        reserve(const int& num);
     void        extend(const GEnergies& energies);
+    void        set_lin(const int& num, const GEnergy& emin,
+                                        const GEnergy& emax);
+    void        set_log(const int& num, const GEnergy& emin,
+                                        const GEnergy& emax);
     void        load(const std::string& filename,
                      const std::string& extname = "ENERGIES");
-    void        save(const std::string& filename, const bool& clobber = false,
+    void        save(const std::string& filename,
+                     const bool&        clobber = false,
                      const std::string& extname = "ENERGIES") const;
     void        read(const GFitsTable& table);
     void        write(GFits& file, const std::string& extname = "ENERGIES") const;
