@@ -911,6 +911,24 @@ void TestGObservation::test_energies(void)
         test_try_failure(e);
     }
 
+    // Check linear energies
+    energies.clear();
+    energies.set_lin(3, GEnergy(1.0, "MeV"), GEnergy(3.0, "MeV"));
+    test_value(energies.size(), 3, "GEnergies should have 3 elements.");
+    test_assert(!energies.is_empty(), "GEnergies should not be empty.");
+    test_value(energies[0].MeV(), 1.0, 1.0e-10, "Energy 0 should be 1 MeV.");
+    test_value(energies[1].MeV(), 2.0, 1.0e-10, "Energy 1 should be 2 MeV.");
+    test_value(energies[2].MeV(), 3.0, 1.0e-10, "Energy 3 should be 3 MeV.");
+
+    // Check logarithmic energies
+    energies.clear();
+    energies.set_log(3, GEnergy(1.0, "MeV"), GEnergy(100.0, "MeV"));
+    test_value(energies.size(), 3, "GEnergies should have 3 elements.");
+    test_assert(!energies.is_empty(), "GEnergies should not be empty.");
+    test_value(energies[0].MeV(), 1.0, 1.0e-10, "Energy 0 should be 1 MeV.");
+    test_value(energies[1].MeV(), 10.0, 1.0e-10, "Energy 1 should be 10 MeV.");
+    test_value(energies[2].MeV(), 100.0, 1.0e-10, "Energy 2 should be 100 MeV.");
+
     // Return
     return;
 }
